--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -8,7 +8,7 @@ menu:
 
 # SubNav
 subnav:
-  github: "https://github.com/hackerwen"
+  github: "https://github.com/worldzhao"
   #weibo: "#"
   #rss: "#"
   #zhihu: ""
