--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: yilia
+theme: landscape
 
 jsonContent:
     meta: false
