--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ category_generator:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: Anisina
 
 # jsonContent:
 #     meta: false
