--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ sitemap:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://worldzhao.github.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
