--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: worldzhao
-subtitle: code build world
+subtitle: 每天学一点，总有那么多不学习的人。
 description: 
 author: worldzhao
 language: zh-Hans
