--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ cache:
 
 # S: Build Lifecycle
 install:
+  - npm config set registry https://registry.npm.taobao.org
   - npm install # 下载依赖
 
 script:
