--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js # 声明环境为node
-node_js: stable
+node_js: 6.10.0
 
 # Travis-CI Caching
 cache:
@@ -8,7 +8,6 @@ cache:
 
 # S: Build Lifecycle
 install:
-  - npm config set registry https://registry.npm.taobao.org
   - npm install # 下载依赖
 
 script:
