--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "hexo": "^3.2.0",
+    "hexo-browsersync": "^0.3.0",
     "hexo-deployer-git": "^0.2.0",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-baidu-sitemap": "^0.1.2",
@@ -17,6 +18,7 @@
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.2.0",
+    "hexo-renderer-jade": "^0.4.1",
     "hexo-renderer-marked": "^0.2.10",
     "hexo-renderer-scss": "^1.2.0",
     "hexo-renderer-stylus": "^0.3.1",
